// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StageScreen renders correctly with back button 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#66D9F0",
        "flex": 1,
      },
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../assets/images/landscapeStagesImage.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": -20,
          "height": 340.875,
          "position": "absolute",
          "width": 3710,
        },
        Object {
          "left": -120,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 18,
            "fontWeight": "500",
            "paddingBottom": 25,
            "paddingHorizontal": 30,
            "paddingTop": 45,
            "textAlign": "center",
            "width": 650,
          },
        ]
      }
    >
      Roger, which stage best describes where you are on your journey?
    </Text>
  </View>
  <View
    style={
      Array [
        Array [
          null,
          Object {
            "left": 5,
            "position": "absolute",
            "top": 25,
          },
        ],
        Object {
          "alignItems": "flex-start",
          "alignSelf": "flex-start",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits="button"
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            null,
            Object {},
            null,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "#ffffff",
                },
                Object {
                  "fontSize": 18,
                },
                Array [
                  Object {
                    "margin": 10,
                  },
                  Object {},
                ],
              ],
              Object {
                "fontFamily": "icomoon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`StageScreen renders correctly without back button 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#66D9F0",
        "flex": 1,
      },
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../assets/images/landscapeStagesImage.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": -20,
          "height": 340.875,
          "position": "absolute",
          "width": 3710,
        },
        Object {
          "left": -120,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 18,
            "fontWeight": "500",
            "paddingBottom": 25,
            "paddingHorizontal": 30,
            "paddingTop": 45,
            "textAlign": "center",
            "width": 650,
          },
        ]
      }
    >
      Roger, which stage best describes where you are on your journey?
    </Text>
  </View>
</View>
`;
